--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="src\test\PBRPipleline\PBRTexture\TesPBRTexture.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\PBRPipleline\PBRDiffuseIrradiance\TesPBRDiffuseIrradiance.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\GLCall.h">
@@ -1203,6 +1206,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\test\PBRPipleline\PBRTexture\TesPBRTexture.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test\PBRPipleline\PBRDiffuseIrradiance\TesPBRDiffuseIrradiance.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
