--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="src\test\PBRPipleline\PBRDiffuseIrradiance\TesPBRDiffuseIrradiance.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\PBRPipleline\PBRSpecularIBL\PBRSpecularIBL.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\GLCall.h">
@@ -1209,6 +1212,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\test\PBRPipleline\PBRDiffuseIrradiance\TesPBRDiffuseIrradiance.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test\PBRPipleline\PBRSpecularIBL\PBRSpecularIBL.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
