--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\test\PBRPipleline\PBRDiffuseIrradiance\TesPBRDiffuseIrradiance.cpp" />
     <ClCompile Include="src\test\PBRPipleline\PBRLighting\TestPBRLighting.cpp" />
+    <ClCompile Include="src\test\PBRPipleline\PBRSpecularIBL-Texture\PBRSpecularIBL-Texture.cpp" />
     <ClCompile Include="src\test\PBRPipleline\PBRSpecularIBL\PBRSpecularIBL.cpp" />
     <ClCompile Include="src\test\PBRPipleline\PBRTexture\TesPBRTexture.cpp" />
     <ClCompile Include="src\test\TestAdvancedData.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="src\include\Shader.h" />
     <ClInclude Include="src\test\PBRPipleline\PBRDiffuseIrradiance\TesPBRDiffuseIrradiance.h" />
     <ClInclude Include="src\test\PBRPipleline\PBRLighting\TesPBRLighting.h" />
+    <ClInclude Include="src\test\PBRPipleline\PBRSpecularIBL-Texture\PBRSpecularIBL-Texture.h" />
     <ClInclude Include="src\test\PBRPipleline\PBRSpecularIBL\PBRSpecularIBL.h" />
     <ClInclude Include="src\test\PBRPipleline\PBRTexture\TesPBRTexture.h" />
     <ClInclude Include="src\test\TestAdvancedData.h" />
