--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClCompile Include="src\test\PBRPipleline\PBRSpecularIBL\PBRSpecularIBL.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\PBRPipleline\PBRSpecularIBL-Texture\PBRSpecularIBL-Texture.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\GLCall.h">
@@ -1215,6 +1218,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\test\PBRPipleline\PBRSpecularIBL\PBRSpecularIBL.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test\PBRPipleline\PBRSpecularIBL-Texture\PBRSpecularIBL-Texture.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
