--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -70,7 +70,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mt.lib;opengl32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype.lib;assimp-vc142-mt.lib;opengl32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -90,7 +90,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mt.lib;opengl32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype.lib;assimp-vc142-mt.lib;opengl32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -143,6 +143,7 @@
     <ClCompile Include="src\test\TestSSAO.cpp" />
     <ClCompile Include="src\test\TestStandDraw.cpp" />
     <ClCompile Include="src\test\TestStencilTesting.cpp" />
+    <ClCompile Include="src\test\TestTextRendering.cpp" />
     <ClCompile Include="src\test\TestTexture.cpp" />
     <ClCompile Include="src\vendor\glm\detail\glm.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
@@ -157,6 +158,61 @@
   <ItemGroup>
     <ClInclude Include="src\include\Application.h" />
     <ClInclude Include="src\include\Camera.h" />
+    <ClInclude Include="src\include\freetype\config\ftconfig.h" />
+    <ClInclude Include="src\include\freetype\config\ftheader.h" />
+    <ClInclude Include="src\include\freetype\config\ftmodule.h" />
+    <ClInclude Include="src\include\freetype\config\ftoption.h" />
+    <ClInclude Include="src\include\freetype\config\ftstdlib.h" />
+    <ClInclude Include="src\include\freetype\config\integer-types.h" />
+    <ClInclude Include="src\include\freetype\config\mac-support.h" />
+    <ClInclude Include="src\include\freetype\config\public-macros.h" />
+    <ClInclude Include="src\include\freetype\freetype.h" />
+    <ClInclude Include="src\include\freetype\ftadvanc.h" />
+    <ClInclude Include="src\include\freetype\ftbbox.h" />
+    <ClInclude Include="src\include\freetype\ftbdf.h" />
+    <ClInclude Include="src\include\freetype\ftbitmap.h" />
+    <ClInclude Include="src\include\freetype\ftbzip2.h" />
+    <ClInclude Include="src\include\freetype\ftcache.h" />
+    <ClInclude Include="src\include\freetype\ftchapters.h" />
+    <ClInclude Include="src\include\freetype\ftcid.h" />
+    <ClInclude Include="src\include\freetype\ftcolor.h" />
+    <ClInclude Include="src\include\freetype\ftdriver.h" />
+    <ClInclude Include="src\include\freetype\fterrdef.h" />
+    <ClInclude Include="src\include\freetype\fterrors.h" />
+    <ClInclude Include="src\include\freetype\ftfntfmt.h" />
+    <ClInclude Include="src\include\freetype\ftgasp.h" />
+    <ClInclude Include="src\include\freetype\ftglyph.h" />
+    <ClInclude Include="src\include\freetype\ftgxval.h" />
+    <ClInclude Include="src\include\freetype\ftgzip.h" />
+    <ClInclude Include="src\include\freetype\ftimage.h" />
+    <ClInclude Include="src\include\freetype\ftincrem.h" />
+    <ClInclude Include="src\include\freetype\ftlcdfil.h" />
+    <ClInclude Include="src\include\freetype\ftlist.h" />
+    <ClInclude Include="src\include\freetype\ftlogging.h" />
+    <ClInclude Include="src\include\freetype\ftlzw.h" />
+    <ClInclude Include="src\include\freetype\ftmac.h" />
+    <ClInclude Include="src\include\freetype\ftmm.h" />
+    <ClInclude Include="src\include\freetype\ftmodapi.h" />
+    <ClInclude Include="src\include\freetype\ftmoderr.h" />
+    <ClInclude Include="src\include\freetype\ftotval.h" />
+    <ClInclude Include="src\include\freetype\ftoutln.h" />
+    <ClInclude Include="src\include\freetype\ftparams.h" />
+    <ClInclude Include="src\include\freetype\ftpfr.h" />
+    <ClInclude Include="src\include\freetype\ftrender.h" />
+    <ClInclude Include="src\include\freetype\ftsizes.h" />
+    <ClInclude Include="src\include\freetype\ftsnames.h" />
+    <ClInclude Include="src\include\freetype\ftstroke.h" />
+    <ClInclude Include="src\include\freetype\ftsynth.h" />
+    <ClInclude Include="src\include\freetype\ftsystem.h" />
+    <ClInclude Include="src\include\freetype\fttrigon.h" />
+    <ClInclude Include="src\include\freetype\fttypes.h" />
+    <ClInclude Include="src\include\freetype\ftwinfnt.h" />
+    <ClInclude Include="src\include\freetype\otsvg.h" />
+    <ClInclude Include="src\include\freetype\t1tables.h" />
+    <ClInclude Include="src\include\freetype\ttnameid.h" />
+    <ClInclude Include="src\include\freetype\tttables.h" />
+    <ClInclude Include="src\include\freetype\tttags.h" />
+    <ClInclude Include="src\include\ft2build.h" />
     <ClInclude Include="src\include\GLCall.h" />
     <ClInclude Include="src\include\Global.h" />
     <ClInclude Include="src\include\Mesh.h" />
@@ -204,6 +260,7 @@
     <ClInclude Include="src\test\TestSSAO.h" />
     <ClInclude Include="src\test\TestStandDraw.h" />
     <ClInclude Include="src\test\TestStencilTesting.h" />
+    <ClInclude Include="src\test\TestTextRendering.h" />
     <ClInclude Include="src\test\TestTexture.h" />
     <ClInclude Include="src\Tutorial\camera.h" />
     <ClInclude Include="src\Tutorial\shader.h" />
